[mod] rename,why plugin download from market does not work

--- a/file-editor-utils/package.json
+++ b/file-editor-utils/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "FileEditorUtils",
+    "name": "file-editor-utils",
     "displayName": "File Editor Utils",
     "description": "File Editor Utils: 1. Add Header Comment 2. Insert DateTime ...",
     "version": "0.0.1",
