[add] 扩充了下light_vs.theme，自定义的颜色， 现在llvm的ir文件好看了很多

--- a/language-support/package.json
+++ b/language-support/package.json
@@ -8,9 +8,17 @@
         "vscode": "^1.25.0"
     },
     "categories": [
-        "Programming Languages"
+        "Programming Languages","Themes"
     ],
     "contributes": {
+        "themes":[
+            {
+                "label": "One More Theme",
+                "id": "One More Theme",
+                "uiTheme": "vs",
+                "path": "./themes/one.more.tmTheme.json"
+            }
+        ],
         "languages": [{
             "id": "llvm",
             "aliases": ["llvm", "LLVM"],
